<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.darshna.login.ui.login.RegistrationLoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:gravity="start"
                    android:text="@string/user_name"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/user_name_size"
                    tools:text="@string/user_name" />

                <TextView
                    android:id="@+id/tagInfoAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_margin">

                    <EditText
                        android:id="@+id/panNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/pan_hint"
                        android:maxLength="10"
                        android:padding="@dimen/padding_10"
                        android:text="AMDPT3605R"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/birthText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/birthdate"
                    android:textAllCaps="true"
                    android:textColor="@color/grey_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">

                    <EditText
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:background="@drawable/selector_edittext"
                        android:digits="01234 56789"
                        android:hint="@string/dd"
                        android:inputType="number"
                        android:maxLength="2"
                        android:imeOptions="actionNext"
                        android:padding="@dimen/padding_10"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_color"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_end"
                        android:background="@drawable/selector_edittext"
                        android:digits="01234 56789"
                        android:hint="@string/mm"
                        android:inputType="number"
                        android:maxLength="2"
                        android:imeOptions="actionNext"
                        android:padding="@dimen/padding_10"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_color"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_edittext"
                        android:digits="01234 56789"
                        android:hint="@string/yyyy"
                        android:inputType="number"
                        android:maxLength="4"
                        android:padding="@dimen/padding_10"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_color"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/des" />


                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@{true ? @drawable/button_enable : @drawable/button_disable}"
                    android:text="@string/next"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/no_pan_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@null"
                    android:gravity="center"
                    android:padding="@dimen/padding_10"
                    android:text="@string/dont_have_pan"
                    android:textColor="@color/color_800080" />

            </LinearLayout>
        </RelativeLayout>


        <ProgressBar
            android:id="@+id/prgrs_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"/>
    </FrameLayout>
</layout>